src/test/deca/etapeB/invalid/type_decl_invalid.deca
// Description : 
// 	test de declaration d'un type qui n'existe pas 
//Resultat:
//      Erreur Contextuelle :integer n'est pas un type 
{
integer x;
}